--- a/note/impl/comp-execs-II.ipynb
+++ b/note/impl/comp-execs-II.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Composite Executors\n",
     "\n",
@@ -13,18 +11,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Preliminaries"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Imports"
@@ -45,7 +44,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -56,9 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -73,9 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Implementation\n",
     "\n",
@@ -86,16 +89,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Sandbox\n",
     "\n",
@@ -105,7 +109,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Flows\n",
@@ -117,7 +121,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -130,7 +137,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -141,7 +151,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Composite-Executor"
@@ -151,7 +161,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -163,7 +176,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -200,7 +216,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -212,7 +231,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -232,9 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# GNUParellel"
    ]
@@ -243,7 +263,10 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -254,7 +277,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
