--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Quickstart\n",
     "\n",
@@ -13,9 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Preliminaries"
    ]
@@ -23,7 +19,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Imports"
@@ -31,87 +27,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import affe\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "\n",
-    "import sklearn\n",
-    "from sklearn.datasets import load_iris"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from affe.execs import (\n",
+    "    CompositeExecutor,\n",
+    "    NativeExecutor,\n",
+    "    JoblibExecutor,\n",
+    "    GNUParallelExecutor,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from affe.tests import get_dummy_flow"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "iris = load_iris()\n",
-    "\n",
-    "X = iris.get('data')\n",
-    "y = iris.get('target')\n",
-    "\n",
-    "matrix = np.c_[X, y]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
-   "source": [
-    "# Fit"
+    "flows = [\n",
+    "    get_dummy_flow(message=\"hi\" * (i + 1), content=dict(i=i * 10)) for i in range(3)\n",
+    "]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
-    "# Predict"
+    "# Flow Definition\n",
+    "\n",
+    "Typically, you have some kind of workflow that you want (or need) to deal with, and need to configure and so on."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "flow = flows[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'io': {'fs': {'root': '/cw/dtaijupiter/NoCsBack/dtai/elia/affe',\n",
+       "   'cli': 'root',\n",
+       "   'data': 'root',\n",
+       "   'out': 'root',\n",
+       "   'scripts': 'root',\n",
+       "   'out.flow.config': 'out.flow',\n",
+       "   'out.flow.logs': 'out.flow',\n",
+       "   'out.flow.results': 'out.flow',\n",
+       "   'out.flow.timings': 'out.flow',\n",
+       "   'out.flow.tmp': 'out.flow',\n",
+       "   'out.flow.flows': 'out.flow',\n",
+       "   'out.flow': 'out'}},\n",
+       " 'message': 'hi',\n",
+       " 'content': {'i': 0}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow.config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flow Execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "2 secs passed\n",
+      "hi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'i': 0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flow.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/cw/dtaijupiter/NoCsBack/dtai/elia/affe/out/flow/logs/logfilehi'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOError(70): handle is closed\n",
+      "IOError(60): handle is closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "flow.run_with_log()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/cw/dtaijupiter/NoCsBack/dtai/elia/affe/out/flow/logs/logfilehihi'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IOError(70): handle is closed\n",
+      "IOError(60): handle is closed\n"
+     ]
+    }
+   ],
+   "source": [
+    "flows[1].run_with_log()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flow Scheduling\n",
+    "\n",
+    "= Multiple execution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "e = NativeExecutor\n",
+    "c_jl = JoblibExecutor(flows, e, n_jobs=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'i': 0}, {'i': 10}, {'i': 20}]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_jl.run()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "j-rwrf",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "j-rwrf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -123,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
