--- a/note/impl/gnuparallel-executor.ipynb
+++ b/note/impl/gnuparallel-executor.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Composite Executors\n",
     "\n",
@@ -13,9 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Preliminaries"
    ]
@@ -24,7 +20,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -35,7 +34,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Imports"
@@ -45,7 +44,10 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -58,7 +60,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -73,9 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Implementation\n",
     "\n",
@@ -86,16 +89,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Sandbox\n",
     "\n",
@@ -105,7 +109,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Flows\n",
@@ -117,7 +121,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -130,7 +137,10 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -150,9 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# GNUParallel"
    ]
@@ -161,7 +169,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -182,7 +193,10 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -204,7 +218,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -212,7 +229,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "## Check directly via shell here in notebook\n",
@@ -224,7 +241,10 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -250,7 +270,10 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [
     {
@@ -292,7 +315,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -301,7 +327,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -309,7 +338,7 @@
   {
    "cell_type": "raw",
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": "false"
    },
    "source": [
     "%%bash -s \"$cwd\" \"$commands_fn\"\n",
@@ -322,7 +351,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
@@ -331,7 +363,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "Collapsed": "false"
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": []
