--- a/note/deploy/conda-linux.ipynb
+++ b/note/deploy/conda-linux.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "tags": []
    },
    "source": [
     "# Conda Environments"
@@ -12,7 +12,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "source": [
     "## Imports"
@@ -22,7 +22,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "source": [
     "## Initialization\n",
@@ -45,7 +45,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [],
    "source": [
@@ -59,9 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Introduction\n",
     "\n",
@@ -72,9 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "Collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "# Workflow\n",
     "\n",
@@ -90,7 +86,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "source": [
     "## Deployment Environment\n",
@@ -102,7 +98,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [
     {
@@ -135,7 +131,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [
     {
@@ -172,7 +168,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "source": [
     "## Development environment\n"
@@ -182,7 +178,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [
     {
@@ -277,7 +273,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "source": [
     "## Jupyter kernel\n",
@@ -289,7 +285,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "Collapsed": "false"
+    "heading_collapsed": "false"
    },
    "outputs": [
     {
@@ -339,9 +335,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "affe",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "affe"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.8.5"
   },
   "toc-autonumbering": true
  },
