--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -18,16 +18,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": "false"
-   },
+   "metadata": {},
    "source": [
     "## Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,37 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from affe.tests import get_dummy_flow"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Setup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flows = [\n",
-    "    get_dummy_flow(message=\"hi\" * (i + 1), content=dict(i=i * 10)) for i in range(3)\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -94,8 +67,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flows saying _\"hi\"_\n",
+    "\n",
+    "To illustrate, let us create 10 different workflows. Each of those says \"hi\" in a signature way."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Making a flow is very easy.\n",
+    "flows = [\n",
+    "    get_dummy_flow(message=\"hi\" * (i + 1), content=dict(i=i * 10)) for i in range(3)\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'io': {'fs': {'root': '/cw/dtaijupiter/NoCsBack/dtai/elia/affe',\n",
+       "{'io': {'fs': {'root': '/Users/zissou/repos/affe',\n",
        "   'cli': 'root',\n",
        "   'data': 'root',\n",
        "   'out': 'root',\n",
@@ -118,6 +112,7 @@
        "   'out.flow.config': 'out.flow',\n",
        "   'out.flow.logs': 'out.flow',\n",
        "   'out.flow.results': 'out.flow',\n",
+       "   'out.flow.models': 'out.flow',\n",
        "   'out.flow.timings': 'out.flow',\n",
        "   'out.flow.tmp': 'out.flow',\n",
        "   'out.flow.flows': 'out.flow',\n",
@@ -126,7 +121,7 @@
        " 'content': {'i': 0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,85 +139,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello world\n",
-      "2 secs passed\n",
-      "hi\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'i': 0}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/cw/dtaijupiter/NoCsBack/dtai/elia/affe/out/flow/logs/logfilehi'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOError(70): handle is closed\n",
-      "IOError(60): handle is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "flow.run_with_log()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/cw/dtaijupiter/NoCsBack/dtai/elia/affe/out/flow/logs/logfilehihi'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOError(70): handle is closed\n",
-      "IOError(60): handle is closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "flows[1].run_with_log()"
    ]
@@ -238,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,20 +185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'i': 0}, {'i': 10}, {'i': 20}]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c_jl.run()"
    ]
@@ -269,9 +195,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "affe",
    "language": "python",
-   "name": "python3"
+   "name": "affe"
   },
   "language_info": {
    "codemirror_mode": {
@@ -283,8 +209,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
-  }
+   "version": "3.9.4"
+  },
+  "toc-autonumbering": true
  },
  "nbformat": 4,
  "nbformat_minor": 4
