quickstart improvements + using properties in Flow

--- a/note/tutorial/quickstart.ipynb
+++ b/note/tutorial/quickstart.ipynb
@@ -17,8 +17,20 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This is a code-formatter, you cann comment it without losing functionality\n",
+    "%load_ext lab_black"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Imports"
    ]
@@ -61,16 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow Definition\n",
-    "\n",
-    "Typically, you have some kind of workflow that you want (or need) to deal with, and need to configure and so on."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Flows saying _\"hi\"_\n",
+    "# Basic Illustration: Flows saying _\"hi\"_\n",
     "\n",
     "To illustrate, let us create 10 different workflows. Each of those says \"hi\" in a signature way."
    ]
@@ -134,32 +137,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow Execution"
+    "## Flow Execution\n",
+    "\n",
+    "Now you can print some hello worlds, embedded in a Flow object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world\n",
+      "2 secs passed\n",
+      "hi\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'i': 0}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.run()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/zissou/repos/affe/out/flow/logs/logfilehi'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flow.run_with_log()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/zissou/repos/affe/out/flow/logs/logfilehihi'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flows[1].run_with_log()"
    ]
@@ -168,14 +215,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Flow Scheduling\n",
+    "## Flow Scheduling\n",
     "\n",
-    "= Multiple execution"
+    "= Execution of multiple flows, for instance via a tool like `joblib`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,12 +232,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'i': 0}, {'i': 10}, {'i': 20}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "c_jl.run()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Manual Creation of Flows\n",
+    "\n",
+    "The \"hi\"-flows defined above were nice because they illustrate in the simplest way possible what a flow is and how it can be used. In this section, we dive in a bit deeper in how you can make a Flow yourself, from scratch."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Your workflow\n",
+    "\n",
+    "Typicall, you start from a certain workflow. As illustrated above, a _workflow_ is a piece of work you care about, and you want to be able to execute it in a controlled, experiment-like fashion. \n",
+    "\n",
+    "Here, we assume you are interested in the archetype machine learning task of predicting the specifies of the Iris flower"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9777777777777777"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import datasets\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load data\n",
+    "X, y = datasets.load_iris(return_X_y=True)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit classifier\n",
+    "clf = DecisionTreeClassifier(max_depth=2)\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "# Predict and Evaluate\n",
+    "y_pred = clf.predict(X_test)\n",
+    "\n",
+    "score = accuracy_score(y_test, y_pred, normalize=True)\n",
+    "\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make your _workflow_ into a _Flow_\n",
+    "\n",
+    "Now that you what you want to do, you want obtain a flow that implements this. The advantage is that annoying things like\n",
+    "\n",
+    "- logging\n",
+    "- timeouts\n",
+    "- execution\n",
+    "- scheduling\n",
+    "\n",
+    "are all taken care of, as soon as you succeed. This means removing boilerplate, and using battle-tested code instead."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementation\n",
+    "\n",
+    "- Subclass the Flow class\n",
+    "- Add anything you like"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from affe import Flow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class IrisFlow(Flow):\n",
+    "    \"\"\"Iris-Flow\"\"\"\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
